daudio = build_target('daudio', [
		'main.cpp',
	], dependencies: [tkn_dep, tkn_audio_dep, dep_playground],
	target_type: exetarget)

daudiorc = build_target('daudiorc', [
		'cubeb.cpp',
	], dependencies: [tkn_dep, dep_cubeb, dep_playground],
	target_type: exetarget)

daudiosin = build_target('daudiosin', [
		'cubeb2.cpp',
	], dependencies: [tkn_dep, dep_cubeb, dep_playground],
	target_type: exetarget)

daudioravg = build_target('daudioravg', [
		'cubeb3.cpp',
	], dependencies: [tkn_dep, dep_cubeb, dep_playground],
	target_type: exetarget)

daudiotest = build_target('daudiotest', [
		'cubeb4.cpp',
	], dependencies: [dep_dlg, dep_swa, dep_cubeb, dep_playground],
	target_type: exetarget)
